sdk/tests/snapshots/test_asset_io__asset_io@bmff_hash.snap
---
source: sdk/tests/test_asset_io.rs
expression: "unescape_json(&Reader::from_stream(format, &mut dest)?.json())?"
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "claim_generator": "test/1.0 c2pa-rs/0.32.6",
      "claim_generator_info": [
        {
          "name": "test",
          "version": "1.0"
        },
        {
          "name": "c2pa-rs",
          "version": "0.32.6"
        }
      ],
      "format": "[FORMAT]",
      "instance_id": [XMP_ID]",
      "ingredients": [],
      "assertions": [
        {
          "label": "c2pa.actions.v2",
          "data": {
            "actions": [
              {
                "action": "c2pa.opened",
                "softwareAgent": {
                  "name": "TestApp",
                  "version": "1.0",
                  "something": "else"
                },
                "parameters": {
                  "description": "import"
                },
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/algorithmicMedia"
              }
            ]
          }
        },
        {
          "label": "c2pa.hash.bmff.v2",
          "data": {
            "exclusions": [
              {
                "xpath": "/uuid",
                "length": null,
                "data": [
                  {
                    "offset": 8,
                    "value": [
                      216,
                      254,
                      195,
                      214,
                      27,
                      14,
                      72,
                      60,
                      146,
                      151,
                      88,
                      40,
                      135,
                      126,
                      196,
                      129
                    ]
                  }
                ],
                "subset": null,
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/ftyp",
                "length": null,
                "data": null,
                "subset": null,
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/meta/iloc",
                "length": null,
                "data": null,
                "subset": null,
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/mfra/tfra",
                "length": null,
                "data": null,
                "subset": null,
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/moov/trak/mdia/minf/stbl/stco",
                "length": null,
                "data": null,
                "subset": [
                  {
                    "offset": 16,
                    "length": 0
                  }
                ],
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/moov/trak/mdia/minf/stbl/co64",
                "length": null,
                "data": null,
                "subset": [
                  {
                    "offset": 16,
                    "length": 0
                  }
                ],
                "version": null,
                "flags": null,
                "exact": null
              },
              {
                "xpath": "/moof/traf/tfhd",
                "length": null,
                "data": null,
                "subset": [
                  {
                    "offset": 16,
                    "length": 8
                  }
                ],
                "version": null,
                "flags": [
                  1,
                  0,
                  0
                ],
                "exact": null
              },
              {
                "xpath": "/moof/traf/trun",
                "length": null,
                "data": null,
                "subset": [
                  {
                    "offset": 16,
                    "length": 4
                  }
                ],
                "version": null,
                "flags": [
                  1,
                  0,
                  0
                ],
                "exact": null
              }
            ],
            "alg": "sha256",
            "hash": "[HASH]",
            "name": "jumbf manifest"
          }
        }
      ],
      "signature_info": {
        "alg": "Ed25519",
        "issuer": "C2PA Test Signing Cert",
        "cert_serial_number": "638838410810235485828984295321338730070538954823"
      },
      "label": "[MANIFEST_URN]"
    }
  }
}
